--- a/happiness-ETL.ipynb
+++ b/happiness-ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
        "4                      0.357  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
        "4                      0.298  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
        " 'Dystopia Residual']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
        " 'Dystopia Residual']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
        " 'Dystopia.Residual']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
        " 'Perceptions of corruption']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
        " 'Perceptions of corruption']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,6 +909,127 @@
    "source": [
     "df_2019.columns.tolist()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename the columns in the df_2015 DataFrame.\n",
+    "df_2015.rename({'Economy (GDP per Capita)':'Economy..GDP.per.Capita.',\n",
+    "                'Health (Life Expectancy)':'Health..Life.Expectancy.',\n",
+    "                'Trust (Government Corruption)':'Trust..Government.Corruption.'\n",
+    "               }, axis='columns', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add df_2015 to SQL\n",
+    "db_string = f\"postgres://postgres:{db_password}@127.0.0.1:5432/world-happiness\"\n",
+    "engine = create_engine(db_string)\n",
+    "df_2015.to_sql(name='2015', con=engine, if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename the columns in the df_2016 DataFrame.\n",
+    "df_2016.rename({'Economy (GDP per Capita)':'Economy..GDP.per.Capita.',\n",
+    "                'Health (Life Expectancy)':'Health..Life.Expectancy.',\n",
+    "                'Trust (Government Corruption)':'Trust..Government.Corruption.'\n",
+    "               }, axis='columns', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add df_2016 to SQL\n",
+    "db_string = f\"postgres://postgres:{db_password}@127.0.0.1:5432/world-happiness\"\n",
+    "engine = create_engine(db_string)\n",
+    "df_2016.to_sql(name='2016', con=engine, if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add df_2017 to SQL\n",
+    "db_string = f\"postgres://postgres:{db_password}@127.0.0.1:5432/world-happiness\"\n",
+    "engine = create_engine(db_string)\n",
+    "df_2017.to_sql(name='2017', con=engine, if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add df_2018 to SQL\n",
+    "db_string = f\"postgres://postgres:{db_password}@127.0.0.1:5432/world-happiness\"\n",
+    "engine = create_engine(db_string)\n",
+    "df_2018.to_sql(name='2018', con=engine, if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add df_2019 to SQL\n",
+    "db_string = f\"postgres://postgres:{db_password}@127.0.0.1:5432/world-happiness\"\n",
+    "engine = create_engine(db_string)\n",
+    "df_2019.to_sql(name='2019', con=engine, if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -934,7 +1055,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
