--- a/happiness-ETL.ipynb
+++ b/happiness-ETL.ipynb
@@ -2871,17 +2871,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "#selecting Score and Country columns only\n",
-    "score_country_2015_2016 = df_2015_2016[['Score','Country']]"
+    "score_country_2015_2016 = df_2015_2016[['Country','Score']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2905,50 +2905,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Score</th>\n",
        "      <th>Country</th>\n",
+       "      <th>Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7.587</td>\n",
        "      <td>Switzerland</td>\n",
+       "      <td>7.587</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7.561</td>\n",
        "      <td>Iceland</td>\n",
+       "      <td>7.561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7.527</td>\n",
        "      <td>Denmark</td>\n",
+       "      <td>7.527</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7.522</td>\n",
        "      <td>Norway</td>\n",
+       "      <td>7.522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7.427</td>\n",
        "      <td>Canada</td>\n",
+       "      <td>7.427</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Score      Country\n",
-       "0  7.587  Switzerland\n",
-       "1  7.561      Iceland\n",
-       "2  7.527      Denmark\n",
-       "3  7.522       Norway\n",
-       "4  7.427       Canada"
+       "       Country  Score\n",
+       "0  Switzerland  7.587\n",
+       "1      Iceland  7.561\n",
+       "2      Denmark  7.527\n",
+       "3       Norway  7.522\n",
+       "4       Canada  7.427"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2959,16 +2959,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "score_country_2017 = df_2017[['Score','Country']]"
+    "score_country_2017 = df_2017[['Country','Score']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2992,50 +2992,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Score</th>\n",
        "      <th>Country</th>\n",
+       "      <th>Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7.537</td>\n",
        "      <td>Norway</td>\n",
+       "      <td>7.537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7.522</td>\n",
        "      <td>Denmark</td>\n",
+       "      <td>7.522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7.504</td>\n",
        "      <td>Iceland</td>\n",
+       "      <td>7.504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7.494</td>\n",
        "      <td>Switzerland</td>\n",
+       "      <td>7.494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7.469</td>\n",
        "      <td>Finland</td>\n",
+       "      <td>7.469</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Score      Country\n",
-       "0  7.537       Norway\n",
-       "1  7.522      Denmark\n",
-       "2  7.504      Iceland\n",
-       "3  7.494  Switzerland\n",
-       "4  7.469      Finland"
+       "       Country  Score\n",
+       "0       Norway  7.537\n",
+       "1      Denmark  7.522\n",
+       "2      Iceland  7.504\n",
+       "3  Switzerland  7.494\n",
+       "4      Finland  7.469"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3046,16 +3046,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "score_country_2018_2019 = df_2018_2019[['Score','Country']]"
+    "score_country_2018_2019 = df_2018_2019[['Country','Score']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -3079,50 +3079,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Score</th>\n",
        "      <th>Country</th>\n",
+       "      <th>Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7.632</td>\n",
        "      <td>Finland</td>\n",
+       "      <td>7.632</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7.594</td>\n",
        "      <td>Norway</td>\n",
+       "      <td>7.594</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7.555</td>\n",
        "      <td>Denmark</td>\n",
+       "      <td>7.555</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7.495</td>\n",
        "      <td>Iceland</td>\n",
+       "      <td>7.495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7.487</td>\n",
        "      <td>Switzerland</td>\n",
+       "      <td>7.487</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Score      Country\n",
-       "0  7.632      Finland\n",
-       "1  7.594       Norway\n",
-       "2  7.555      Denmark\n",
-       "3  7.495      Iceland\n",
-       "4  7.487  Switzerland"
+       "       Country  Score\n",
+       "0      Finland  7.632\n",
+       "1       Norway  7.594\n",
+       "2      Denmark  7.555\n",
+       "3      Iceland  7.495\n",
+       "4  Switzerland  7.487"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3133,7 +3133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3143,7 +3143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
    "metadata": {
     "scrolled": false
    },
@@ -3169,50 +3169,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Score</th>\n",
        "      <th>Country</th>\n",
+       "      <th>Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7.587</td>\n",
        "      <td>Switzerland</td>\n",
+       "      <td>7.587</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7.561</td>\n",
        "      <td>Iceland</td>\n",
+       "      <td>7.561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7.527</td>\n",
        "      <td>Denmark</td>\n",
+       "      <td>7.527</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7.522</td>\n",
        "      <td>Norway</td>\n",
+       "      <td>7.522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7.427</td>\n",
        "      <td>Canada</td>\n",
+       "      <td>7.427</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Score      Country\n",
-       "0  7.587  Switzerland\n",
-       "1  7.561      Iceland\n",
-       "2  7.527      Denmark\n",
-       "3  7.522       Norway\n",
-       "4  7.427       Canada"
+       "       Country  Score\n",
+       "0  Switzerland  7.587\n",
+       "1      Iceland  7.561\n",
+       "2      Denmark  7.527\n",
+       "3       Norway  7.522\n",
+       "4       Canada  7.427"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3223,7 +3223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3233,7 +3233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -3257,50 +3257,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Score</th>\n",
        "      <th>Country</th>\n",
+       "      <th>Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7.587</td>\n",
        "      <td>Switzerland</td>\n",
+       "      <td>7.587</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7.561</td>\n",
        "      <td>Iceland</td>\n",
+       "      <td>7.561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7.527</td>\n",
        "      <td>Denmark</td>\n",
+       "      <td>7.527</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7.522</td>\n",
        "      <td>Norway</td>\n",
+       "      <td>7.522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7.427</td>\n",
        "      <td>Canada</td>\n",
+       "      <td>7.427</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Score      Country\n",
-       "0  7.587  Switzerland\n",
-       "1  7.561      Iceland\n",
-       "2  7.527      Denmark\n",
-       "3  7.522       Norway\n",
-       "4  7.427       Canada"
+       "       Country  Score\n",
+       "0  Switzerland  7.587\n",
+       "1      Iceland  7.561\n",
+       "2      Denmark  7.527\n",
+       "3       Norway  7.522\n",
+       "4       Canada  7.427"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3311,7 +3311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -3335,35 +3335,35 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Score</th>\n",
        "      <th>Country</th>\n",
+       "      <th>Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7.587</td>\n",
        "      <td>Switzerland</td>\n",
+       "      <td>7.587</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7.561</td>\n",
        "      <td>Iceland</td>\n",
+       "      <td>7.561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7.527</td>\n",
        "      <td>Denmark</td>\n",
+       "      <td>7.527</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7.522</td>\n",
        "      <td>Norway</td>\n",
+       "      <td>7.522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7.427</td>\n",
        "      <td>Canada</td>\n",
+       "      <td>7.427</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -3372,28 +3372,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>151</th>\n",
-       "      <td>3.334</td>\n",
        "      <td>Rwanda</td>\n",
+       "      <td>3.334</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>152</th>\n",
-       "      <td>3.231</td>\n",
        "      <td>Tanzania</td>\n",
+       "      <td>3.231</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>153</th>\n",
-       "      <td>3.203</td>\n",
        "      <td>Afghanistan</td>\n",
+       "      <td>3.203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>154</th>\n",
-       "      <td>3.083</td>\n",
        "      <td>Central African Republic</td>\n",
+       "      <td>3.083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>155</th>\n",
-       "      <td>2.853</td>\n",
        "      <td>South Sudan</td>\n",
+       "      <td>2.853</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3401,23 +3401,23 @@
        "</div>"
       ],
       "text/plain": [
-       "     Score                   Country\n",
-       "0    7.587               Switzerland\n",
-       "1    7.561                   Iceland\n",
-       "2    7.527                   Denmark\n",
-       "3    7.522                    Norway\n",
-       "4    7.427                    Canada\n",
-       "..     ...                       ...\n",
-       "151  3.334                    Rwanda\n",
-       "152  3.231                  Tanzania\n",
-       "153  3.203               Afghanistan\n",
-       "154  3.083  Central African Republic\n",
-       "155  2.853               South Sudan\n",
+       "                      Country  Score\n",
+       "0                 Switzerland  7.587\n",
+       "1                     Iceland  7.561\n",
+       "2                     Denmark  7.527\n",
+       "3                      Norway  7.522\n",
+       "4                      Canada  7.427\n",
+       "..                        ...    ...\n",
+       "151                    Rwanda  3.334\n",
+       "152                  Tanzania  3.231\n",
+       "153               Afghanistan  3.203\n",
+       "154  Central African Republic  3.083\n",
+       "155               South Sudan  2.853\n",
        "\n",
        "[782 rows x 2 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
