Adding machine learning model description

--- a/happiness_machine_learning_model.ipynb
+++ b/happiness_machine_learning_model.ipynb
@@ -1274,11 +1274,15 @@
    "metadata": {},
    "source": [
     "# Build Linear Regression Models\n",
-    "Build, train and test Linear Regression models for all factors that presented linear relationship with Happiness Score: Economy, Social Support, Life Expectancy and Freedom. Model names are as follows: \n",
+    "Linear Regression is used since we want to see how shifting the value of each factor alter happiness scores. The drawback of using linear regression is that it's a time consuming process. A model is built for each of the four factors that show a linear relationship with happiness score. Multiplied with each of the five years of data, each model runs five times to gather results.\n",
+    "\n",
+    "In this section, we build, train and test Linear Regression models for all factors that presented linear relationship with Happiness Score: Economy, Social Support, Life Expectancy and Freedom. Reason being that linear regression only works when there is a linear relationship. Model names are as follows: \n",
     "- model_economy\n",
     "- model_social_support\n",
     "- model_life_expectancy\n",
-    "- model_freedom"
+    "- model_freedom\n",
+    "\n",
+    "Test size for these models is 1/3 since this is a standard test size. We don't want the testing size to be too big that it takes away from training, yet we still need a sizable amount to test the model."
    ]
   },
   {
@@ -1457,6 +1461,15 @@
     "\n",
     "# print slope of line\n",
     "print(model_economy.coef_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy Score\n"
    ]
   },
   {
